# english-fight

./: .bandit.yaml  .deepsource.toml  .deployignore  .editorconfig  .env.example  .gitignore  LICENSE  Procfile  README.md  asset-manifest.json  conftest.py  index.html  json_encoder.py  language_pairs.py  language_pairs_data.json  list_utils.py  list_utils_test.py  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: backend.yml  check.yml  e2e.yml  frontend.yml  lint-black.yml  main.yml
backend/: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  Dockerfile  conftest.py  docker-compose.prod.yaml  docker-compose.yaml  nixpacks.toml  pyproject.toml  pytest.ini  test_utils.py
backend/common/: vk_utils.py
backend/data/: pictures.py  word_pairs.py
backend/data/input/: word_pairs.csv
backend/enfight/: asgi.py  settings.py  urls.py
backend/game/: admin.py  constants.py  notifications_utils.py  test_question_utils.py  urls.py
backend/game/authentication/: authentication_adapter.py  base_websocket_authentication.py  fake_vk_id_authentication.py  vk_app_authentication.py  websocket_authentication.py
backend/game/consumers/: __init__.py  multiplayer_game_consumer_test.py  start_game_consumer_mixin.py  websocket_errors.py
backend/game/game_questions_creators/: __init__.py
backend/game/game_questions_creators/tests/: test_picture_questions_creator.py
backend/game/management/commands/: notify.py
backend/game/migrations/: 0001_initial.py  0002_create_superuser.py  0004_add_vk_fields_to_appuser.py  0009_appuser_notifications_status.py  0010_game_type.py  0012_increase_max_length_of_question.py  0016_gamedefinition_started.py  0017_remove_similar_looking_chars_in_game_def_id.py
backend/game/models/: __init__.py  app_user.py  game.py  question.py
backend/game/serializers/: serializer_utils.py  user_serializer.py
backend/game/views/: app_index_view.py  health_view.py
backend/game/views/tests/: test_game_view.py  test_monthly_scoreboard.py
backend/scripts/: check_style.sh  set_mysql_tz_info.sh
backend/tests/e2e/: app_test.py  conftest.py
common/: list_utils.py  list_utils_test.py  string_utils.py
data/: pictures.py  word_pairs.py
enfight/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .env  .eslintrc.js  package.json
frontend/src/: AppService.ts  index.tsx
game/: admin.py  admin_pre_filtered_list_filter.py  command_utils.py  constants.py  consumers.py  game_utils.py  multiplayer_game_consumer.py  notifications_utils.py  permissions.py  test_game_utils.py  test_hidepairs.py  test_notify.py  test_parsedata.py  test_question_utils.py  test_vk_app_authentication.py  urls.py  vk_app_authentication.py  websocket_urls.py
game/authentication/: authentication_utils.py  base_websocket_authentication.py  fake_vk_id_authentication.py  vk_app_authentication.py
game/authentication_backends/: authentication_adapter.py  authentication_utils.py  fake_vk_id_authentication.py  vk_app_authentication.py
game/consumers/: authenticate_game_consumer_mixin.py  base_game_consumer.py  finished_game_consumer_mixin.py  multiplayer_game_consumer.py  multiplayer_game_consumer_test.py  start_game_consumer_mixin.py
game/game_questions_creators/: picture_questions_creator.py  questions_creator.py  word_questions_creator.py
game/migrations/: 0003_appgroup.py  0005_game_question.py  0005_languagepair_word.py  0006_appuser_photo_url.py  0006_appuser_visits_number.py  0006_game_question.py  0007_fill_user_vk_data.py  0008_change_app_user_managers.py  0011_rename_question_word_to_question.py  0013_game_definition.py  0014_remove_game_type.py  0015_add_game_definition_to_game.py
game/models/: __init__.py  app_group.py  app_user.py  game.py  game_definition.py  language_pair.py  question.py  word.py
game/serializers/: game_definition_serializer.py  game_serializer.py  question_serializer.py  question_with_answer_serializer.py  scoreboard_user_serializer.py  user_serializer.py
game/views/: game_definition_view.py  game_view.py  question_view.py  scoreboard_view.py  user_view.py
scripts/: bandit.sh  deploy.py  dump_db.py  export_requirements.sh  playwright_codegen.sh  run_e2e_tests.sh
static/css/: main.7d26e236.chunk.css  main.7d26e236.chunk.css.map
static/js/: 2.028ae31e.chunk.js  2.028ae31e.chunk.js.map  2.5f6c2028.chunk.js  2.5f6c2028.chunk.js.LICENSE.txt  (+30 more)
test_input_files/: hidepairs_test_file.txt
(+48 files in other folders)
