[tool.poetry]
name = "english-fight-api"
version = "0.1.0"
description = "Backend api for english fight VK app"
authors = ["Dima Krutolianov <DimaKrutDK@ya.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.3"
django-environ = "^0.4.5"
mysqlclient = "^2.0.1"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
