[tool.poetry]
name = "english-fight-api"
version = "0.1.0"
description = "Backend api for english fight VK app"
authors = ["Dima Krutolianov <DimaKrutDK@ya.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.2"
Django = "^4.1.13"
django-environ = "^0.9.0"
mysqlclient = "^2.0.1"
djangorestframework = "^3.14.0"
drf-flex-fields = "^1.0.0"
django-cors-headers = "^3.13.0"
click = "^8.1.3"
django-click = "^2.3.0"
django-lifecycle = "^1.0.0"
django-cprofile-middleware = "^1.0.5"
sentry-sdk = "1.17.0"
vk-api = "^11.9.1"
typing-extensions = "^3.7.4"
django-hashid-field = "^3.3.7"
channels = {extras = ["daphne"], version = "^4.0.0"}
channels-redis = "^4.0.0"
daphne = "^4.0.0"
whitenoise = "^6.2.0"
logtail-python = "^0.2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-django = "^4.5.2"
snakeviz = "^2.1.0"
black = "^22.12.0"
flake8 = "^3.8.4"
bandit = "^1.7.0"
pytest-asyncio = "^0.20.3"
pytest-playwright = "^0.3.0"

[tool.black]
line-length = 79
exclude="migrations"
skip-string-normalization=true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
